--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@vapi-ai/web": "^2.5.2",
     "next": "14.2.35",
     "openai": "^6.25.0",
     "react": "^18",
