--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@vapi-ai/web": "^2.5.2",
+    "fast-glob": "^3.3.3",
+    "ignore": "^7.0.5",
     "next": "14.2.35",
+    "nodejs-whisper": "^0.2.9",
+    "ollama": "^0.6.3",
     "openai": "^6.25.0",
     "react": "^18",
     "react-dom": "^18"
